Fixed: dark mode zoom animations

--- a/Front-end/src/components/general/Header.css
+++ b/Front-end/src/components/general/Header.css
@@ -50,7 +50,6 @@
 
 :root[data-theme='dark'] .header {
     background-color: #06200d;
-    transition: 1s;
 }
 
 /* ====== RESPONSIVIDADE ====== */
